package HW_3_BabysitterExchange.Project;

import java.math.BigDecimal;

//Класс "Оплата наличкой"
public class Cash implements Payments{
    @Override
    public void doTransaction(int amount) {
        //logic
    }
}
