package HW_3_BabysitterExchange.Project;

//Интерфейс "Отзыв"
public interface LeavingFeedback {

    void leaveFeedback();
}
