package HW_3_BabysitterExchange.Project;

//Класс "Оплата картой"
public class PayByBankCard implements Payments{
    @Override
    public void doTransaction(int amount) {
        //logic
    }
}
