package HW_3_BabysitterExchange.Project;

//Класс "Оплата телефоном"
public class PayByPhone implements Payments {
    @Override
    public void doTransaction(int amount) {
        //logic
    }
}
