package HW_3_BabysitterExchange.Project;

//Интерфейс оплат
public interface Payments {
    void doTransaction(int amount);

}
