package HW_3_BabysitterExchange.Project;

//Интерфейс "Возможность взять заказ"
public interface takingOrder {
    void takeOrder(int orderId);
}
